<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gauravsahu.rides.fragments.FindRidesFragment"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@color/colorGrey">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_logo"
        android:contentDescription="@string/app_logo"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/version_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/default_version"
        android:textColor="#000000"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/developer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer_name"
        android:textColor="#000000"
        android:textSize="22sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/developer_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/support_email"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>