<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.gauravsahu.rides.fragments.FindRidesFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorGrey">

    <RelativeLayout
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_pic"
            android:contentDescription="@string/profile_picture"
            android:src="@drawable/img_logo"
            app:civ_border_width="1dp"
            app:civ_border_color="#FFFFFFFF"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_name"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:layout_alignParentRight="false"
            android:layout_alignParentEnd="false"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignTop="@+id/profile_pic"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/profile_pic"
            android:layout_toRightOf="@+id/profile_pic" />

        <TextView
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_alignParentRight="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="false"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_alignBottom="@+id/profile_pic"
            android:layout_marginBottom="10dp"
            android:layout_toRightOf="@+id/profile_pic"
            android:layout_toEndOf="@+id/profile_pic"
            android:layout_below="@+id/profile_name" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/uber_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp">

        <TextView
            android:id="@+id/uber_connect"
            android:text="@string/connect_with_uber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_centerInParent="true" />

        <Switch
            android:id="@+id/uber_connect_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ola_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp">

        <TextView
            android:id="@+id/ola_connect"
            android:text="@string/connect_with_ola"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_centerInParent="true" />

        <Switch
            android:id="@+id/ola_connect_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</LinearLayout>